# road-segmentation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  WRITEUP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: deeplabv3plus_resnet50.yaml  finetune_boundary_loss.yaml  finetune_cldice.yaml  linknet_resnet34.yaml  segformer_mitb2.yaml  unet_efficientnet_b4.yaml  unet_efficientnet_b7.yaml  unet_resnet34.yaml  unetplusplus_efficientnet_b4.yaml  unetplusplus_efficientnet_b4_1024.yaml
data/: README.md
docs/: literature_review.md  literature_review_claude.md  postprocessing_review.md  presentation.pptx
notebooks/: 01_eda.ipynb  02_model_comparison.ipynb  02_training.ipynb  03_training.ipynb  04_data_leakage_check.ipynb  05_error_analysis.ipynb  06_data_leakage_check.ipynb  06_postprocessing_ablation.ipynb  07_model_optimization.ipynb  08_metric_analysis.ipynb  09_train_cldice.ipynb  10_metric_analysis_cldice.ipynb  README.md
scripts/: build_presentation.py  download_data.py  download_model.py  entrypoint.sh  optimize.py  serve.py  test_api_client.py  train.py  upload_model.py  upload_to_wandb.py
src/road_segmentation/: __init__.py  config.py  env.py  paths.py
src/road_segmentation/analysis/: __init__.py  connectivity.py  inference_cache.py  width_metrics.py
src/road_segmentation/api/: __init__.py  app.py  inference.py  observability.py  optimize.py
tests/: conftest.py  test_api.py  test_config.py  test_dataset.py  test_e2e.py  test_losses.py  test_model.py  test_postprocessing.py
(+18 files in other folders)
